backend/kubernetes_config/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: scm-ingress
spec:
  defaultBackend:
    service:
      name: django-service
      port:
        number: 80 # Should match the port used by the Service
